fix: Fix alignment and styling of the avatars

--- a/src/modules/users/Users.scss
+++ b/src/modules/users/Users.scss
@@ -30,6 +30,13 @@
 			font-size: 1em;
 		}
 
+		img {
+			border-radius: 100%;
+			width: 50px;
+			height: 50px;
+			border: 2px solid #fff;
+		}
+
 		/* tr */
 		&-row {
 			display: table-row;
@@ -98,6 +105,7 @@
 		display: table-cell;
 		border-bottom: 1px solid #f1f0ee;
 		border-collapse: collapse;
+		vertical-align: middle;
 
 		&:first-child {
 			min-width: 50px;
